Changed biocViews entry of Statistics to Bioinformatics.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/BicARE@38070 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: BicARE
-Version: 1.1.0
+Version: 1.1.1
 Date: 2008-06-05
 Title: BicARE
 Depends: R (>= 1.8.0), Biobase, multtest, GSEABase
@@ -7,5 +7,5 @@ Author: Pierre Gestraud
 Maintainer: Pierre Gestraud , <pierre.gestraud@curie.fr>
 Description:Biclustering Analysis and Results Exploration
 License: GPL
-biocViews: Microarray, Transcription, Statistics, Clustering
+biocViews: Microarray, Transcription, Bioinformatics, Clustering
 URL: http://bioinfo.curie.fr
