bug fix in print.biclustering
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/BicARE@38083 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: BicARE
 Version: 1.1.1
 Date: 2008-06-05
-Title: BicARE
+Title: Biclustering Analysis and Results Exploration
 Depends: R (>= 1.8.0), Biobase, multtest, GSEABase
 Author: Pierre Gestraud
-Maintainer: Pierre Gestraud , <pierre.gestraud@curie.fr>
+Maintainer: Pierre Gestraud  <pierre.gestraud@curie.fr>
 Description:Biclustering Analysis and Results Exploration
 License: GPL
 biocViews: Microarray, Transcription, Bioinformatics, Clustering
