--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BicARE
-Version: 1.3.0
+Version: 1.3.1
 Date: 2008-06-05
 Title: Biclustering Analysis and Results Exploration
-Depends: R (>= 1.8.0), Biobase, multtest, GSEABase
+Depends: R (>= 1.8.0), Biobase (>= 2.5.5), multtest, GSEABase
 Author: Pierre Gestraud
 Maintainer: Pierre Gestraud  <pierre.gestraud@curie.fr>
 Description:Biclustering Analysis and Results Exploration
